# cella-nova-rs

./: Cargo.toml  NEXT_STEPS.md  pyproject.toml
src/: gpu_flow_lenia.rs  gpu_lenia.rs  lib.rs  main.rs  wfft.rs
train/: train_lenia.py
