[package]
name = "lenia_ca"
version = "0.1.0"
authors = ["Zoran <lazovicff@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
ndarray = "0.15.6"
rustfft = "6.1.0"
num-complex = "0.4.2"
rand = "0.8.5"
wgpu = "0.16"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["extern_crate_alloc"] }
