[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "flow-lenia-train"
version = "0.1.0"
description = "Flow Lenia training pipeline — PyTorch GPU backpropagation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
]

[project.scripts]
train-lenia = "train.train_lenia:main"
